--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,6 +38,7 @@
             <hr style="margin: 1rem 1.5rem;">
             <a href="{{ url_for('members', guild_id=guild_id) }}">Quản lý Thành viên</a>
             <a href="{{ url_for('history', guild_id=guild_id) }}">Lịch sử Giao dịch</a>
+            <a href="{{ url_for('logs', guild_id=guild_id) }}">Live Log</a>
         </div>
         <div class="sidebar-footer">
              <a href="{{ url_for('index') }}" class="poetic-button poetic-button-secondary">Về trang chủ</a>
